--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -31,6 +31,7 @@ Declare variables and functions setup by [[file:init.el][init.el]].
   (use-package projectile
     :ensure t
     :config
+    (setq projectile-completion-system 'ivy)
     (projectile-mode)
     :delight)
 #+END_SRC
@@ -97,7 +98,10 @@ Declare variables and functions setup by [[file:init.el][init.el]].
   (use-package recentf
     :config
     (mapc (apply-partially #'add-to-list 'recentf-exclude)
-          (list no-littering-etc-directory no-littering-var-directory))
+          (list "/share/emacs/"
+                (expand-file-name (locate-user-emacs-file "elpa/"))
+                no-littering-etc-directory
+                no-littering-var-directory))
     (recentf-mode))
 #+END_SRC
 
@@ -395,6 +399,30 @@ Bury buffers, don't kill them. Computers have more than enough memory.
 #+END_SRC
 
 * Other
+
+** ivy - completing-read replacement
+[[https://github.com/abo-abo/swiper][ivy (GitHub)]]
+
+Optional dependencies:
+
+- [[https://github.com/lewang/flx][flx]]: Score candidates
+
+#+BEGIN_SRC emacs-lisp
+  (use-package ivy
+    :ensure t
+    :config
+    (setq ivy-re-builders-alist '((t . ivy--regex-fuzzy)))
+    (setq ivy-use-virtual-buffers t)
+    (setq ivy-virtual-abbreviate 'full)
+    (setq ivy-count-format "%d/%d ")
+    (ivy-mode)
+    :delight)
+#+END_SRC
+
+#+BEGIN_SRC emacs-lisp
+  (use-package flx
+    :ensure t)
+#+END_SRC
 
 ** calendar - Calendar
 #+BEGIN_SRC emacs-lisp
