[emacs] Stop anchoring pattern.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -414,6 +414,7 @@ Optional dependencies:
     (setq ivy-re-builders-alist '((t . ivy--regex-fuzzy)))
     (setq ivy-use-virtual-buffers t)
     (setq ivy-virtual-abbreviate 'full)
+    (setq ivy-initial-inputs-alist nil)
     (setq ivy-count-format "%d/%d ")
     (ivy-mode)
     :delight)
