[emacs] Use correct variable for setting buffer dictionary.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -373,8 +373,7 @@ For the major mode, see [[*YASnippet][YASnippet]].
       ;; be set
       (when (eq system-type 'windows-nt)
         (setenv "DICTIONARY" dictionary-name))
-      (setq ispell-dictionary dictionary-name))
-    (put 'ispell-dictionary 'safe-local-variable #'stringp))
+      (setq ispell-dictionary dictionary-name)))
 #+END_SRC
 
 ** flycheck - Show syntax & style errors
