--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -295,6 +295,14 @@ recognize [[*subword - Recognize words in camel case words][subwords]].
     :delight)
 #+END_SRC
 
+** rainbow-delimiters - Show bracket depth
+[[https://github.com/Fanael/rainbow-delimiters][rainbow-delimiters (GitHub)]]
+
+#+BEGIN_SRC emacs-lisp
+  (use-package rainbow-delimiters
+    :ensure t)
+#+END_SRC
+
 ** expand-region - Mark increasingly larger unit
 [[https://github.com/magnars/expand-region.el][expand-region (GitHub)]]
 
@@ -543,6 +551,8 @@ Enable minibuffer commands (e.g. [[*counsel - ivy powered commands][counsel]]) i
 #+BEGIN_SRC emacs-lisp
   (use-package elisp-mode
     :mode ((rx ".el" string-end) . emacs-lisp-mode)
+    :config
+    (add-hook 'emacs-lisp-mode-hook #'rainbow-delimiters-mode)
     :delight (emacs-lisp-mode "El" :major))
 #+END_SRC
 
@@ -607,6 +617,8 @@ Enable minibuffer commands (e.g. [[*counsel - ivy powered commands][counsel]]) i
 #+BEGIN_SRC emacs-lisp
   (use-package scheme
     :mode ((rx ".scm" string-end) . scheme-mode)
+    :config
+    (add-hook 'scheme-mode-hook #'rainbow-delimiters-mode)
     :delight (scheme-mode "Scm" :major))
 #+END_SRC
 
@@ -724,20 +736,41 @@ Load [[https://github.com/purcell/color-theme-sanityinc-tomorrow][Tomorrow]] the
              (pcase-lambda (`(,name . ,rgb))
                (cons name (apply #'color-rgb-to-hex rgb)))
              (map-let                     ; How to use let-alist and backquote?
-                 (current-line selection)
+                 (foreground background current-line selection
+                  yellow green aqua blue)
                  (mapcar (pcase-lambda (`(,name . ,hex))
                            (cons name (color-name-to-rgb hex)))
                          theme)
-               `((alt . ,(koek-thm/mix current-line selection))))))
+               `((lc-fg     . ,(koek-thm/mix foreground background))
+                 (lc-bg     . ,(koek-thm/mix current-line selection))
+                 (lc-yellow . ,(koek-thm/mix yellow background))
+                 (lc-green  . ,(koek-thm/mix green background))
+                 (lc-aqua   . ,(koek-thm/mix aqua background))
+                 (lc-blue   . ,(koek-thm/mix blue background))))))
            (spec
-            (map-let (alt selection orange) (append personal theme)
-              `((show-paren-match :foreground unspecified :background ,alt)
+            (map-let
+                (foreground lc-fg lc-bg selection
+                 orange lc-yellow lc-green lc-aqua lc-blue)
+                (append personal theme)
+              `((show-paren-match :foreground ,foreground
+                                  :background unspecified
+                                  :weight bold)
                 (mode-line-emphasis :foreground ,orange :slant unspecified)
+                ;; rainbow-delimiters-mode
+                (rainbow-delimiters-depth-1-face :foreground ,lc-fg)
+                (rainbow-delimiters-depth-2-face :foreground ,lc-aqua)
+                (rainbow-delimiters-depth-3-face :foreground ,lc-yellow)
+                (rainbow-delimiters-depth-4-face :foreground ,lc-green)
+                (rainbow-delimiters-depth-5-face :foreground ,lc-blue)
+                (rainbow-delimiters-depth-6-face :foreground ,lc-fg)
+                (rainbow-delimiters-depth-7-face :foreground ,lc-aqua)
+                (rainbow-delimiters-depth-8-face :foreground ,lc-yellow)
+                (rainbow-delimiters-depth-9-face :foreground ,lc-green)
                 ;; whitespace-mode
-                (whitespace-space    :foreground ,alt :background unspecified)
-                (whitespace-hspace   :foreground ,alt :background unspecified)
-                (whitespace-tab      :foreground ,alt :background unspecified)
-                (whitespace-newline  :foreground ,alt :background unspecified)
+                (whitespace-space    :foreground ,lc-bg :background unspecified)
+                (whitespace-hspace   :foreground ,lc-bg :background unspecified)
+                (whitespace-tab      :foreground ,lc-bg :background unspecified)
+                (whitespace-newline  :foreground ,lc-bg :background unspecified)
                 (whitespace-trailing :foreground unspecified
                                      :background ,selection)
                 (whitespace-empty    :foreground unspecified
