--- a/README.org
+++ b/README.org
@@ -38,3 +38,15 @@ Run:
   gsettings set org.gnome.desktop.wm.keybindings switch-to-workspace-right "['']"
   gsettings set org.gnome.desktop.wm.keybindings switch-to-workspace-down "['<Super>Page_Down']"
 #+END_SRC
+
+** Spell checking contractions fails
+Open the dictionary's affix file. On Arch Linux, affix files are saved
+in ~/usr/share/hunspell/~. Add:
+
+#+BEGIN_SRC fundamental
+  ICONV 1
+  ICONV ’ '
+  WORDCHARS '’
+#+END_SRC
+
+For more information, see ~man 5 hunspell~.
